--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,10 @@
       "react-app/jest"
     ]
   },
+  "engines" : { 
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
